
[build-system]
requires = ['flit_core >=3.4,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'execflow'
dynamic = ['version']
authors = [
    {name = 'louisponet', email = 'louisponet@epfl.ch'},
    {name = 'Francesca L. Bleken', email = 'francesca.l.bleken@sintef.no'},
    {name = 'Casper Welzel Andersen', email = 'casper.w.andersen@sintef.no'},
]
readme = 'README.md'
license = {file = 'LICENSE'}
description = "openmodel execflow"
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
requires-python = '>=3.9,<3.12'

dependencies = [
    'aiida-core~=2.5',
    'aiida-pseudo~=1.5',
    'aiida-shell>=0.7.0,<1',
    'cachecontrol>=0.14.0,<1',
    'chevron>=0.14.0,<1',
    'DLite-Python>=0.5.1,<1',
    'jsonref==1.1.0',
    'jsonschema~=4.22',
    'oteapi-core>=0.6.1,<1',
    'oteapi-dlite>=0.2.0,<1',
]

[project.urls]
Home = 'https://github.com/H2020-OpenModel/ExecFlow'
Source = 'https://github.com/H2020-OpenModel/ExecFlow'

[project.entry-points.'aiida.data']
'execflow.oteapi_pipeline'      = 'execflow.data.oteapi.declarative_pipeline:OTEPipelineData'
'execflow.dataresourceconfig'   = 'execflow.data.oteapi.resourceconfig:ResourceConfigData'
'execflow.filterconfig'         = 'execflow.data.oteapi.filterconfig:FilterConfigData'
'execflow.functionconfig'       = 'execflow.data.oteapi.functionconfig:FunctionConfigData'
'execflow.mappingconfig'        = 'execflow.data.oteapi.mappingconfig:MappingConfigData'
'execflow.transformationconfig' = 'execflow.data.oteapi.transformationconfig:TransformationConfigData'

[project.entry-points.'aiida.calculations']
'execflow.data.CUDS2DataNode' = 'execflow.data.cuds:CUDS2DataNode'
'execflow.dataresource_init'  = 'execflow.oteapi_strategies.dataresource:init_dataresource'
'execflow.dataresource_get'   = 'execflow.oteapi_strategies.dataresource:get_dataresource'
'execflow.filter_init'        = 'execflow.oteapi_strategies.filter:init_filter'
'execflow.filter_get'         = 'execflow.oteapi_strategies.filter:get_filter'
'execflow.mapping_init'       = 'execflow.oteapi_strategies.mapping:init_mapping'
'execflow.mapping_get'        = 'execflow.oteapi_strategies.mapping:get_mapping'
'execflow.parse_oteapi_pipeline'     = 'execflow.calculations.parse_oteapi_pipeline:parse_oteapi_pipeline'
'execflow.update_oteapi_session'     = 'execflow.calculations.update_oteapi_session:update_oteapi_session'
'execflow.fake_qe_pw' = 'execflow.calculations.fake:FakeQEPW'

[project.entry-points.'oteapi.function']
'execflow.aiidacuds/cuds2datanode' = 'execflow.data.cuds:CUDS2DataNodeStrategy'
'execflow.aiidacuds/datanode2cuds' = 'execflow.data.cuds:DataNode2CUDSStrategy'
'execflow.aiidacuds/file2collection' = 'execflow.data.file2collection:File2CollectionStrategy'


[project.entry-points.'aiida.workflows']
'execflow.declarative'         = 'execflow.workchains.declarative_chain:DeclarativeChain'
'execflow.oteapipipeline'      = 'execflow.workchains.oteapi_pipeline:OTEPipeline'
'execflow.exec_wrapper'        = 'execflow.workchains.exec_wrapper:ExecWrapper'
'execflow.function_init'       = 'execflow.oteapi_strategies.function:init_function'
'execflow.function_get'        = 'execflow.oteapi_strategies.function:get_function'
'execflow.transformation_init' = 'execflow.oteapi_strategies.transformation:init_transformation'
'execflow.transformation_get'  = 'execflow.oteapi_strategies.transformation:get_transformation'

[tool.flit.module]
name = 'execflow'

[tool.flynt]
line-length = 120
fail-on-change = true

[tool.black]
line-length = 120

[tool.isort]
force_sort_within_sections = true
include_trailing_comma = true
line_length = 120
multi_line_output = 3  # this configuration is compatible with yapf

[tool.pydocstyle]
ignore = [
    'D104',
    'D202',
    'D203',
    'D213'
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.tool-check]
generated-members = 'self.exit_codes.*'

[tool.pylint.messages_control]
disable = [
    'duplicate-code',
    'fixme',
    'inconsistent-return-statements',
    'import-outside-toplevel',
    'locally-disabled',
    'logging-format-interpolation',
    'no-else-raise',
    'too-many-arguments',
    'too-many-ancestors',
    'too-many-branches',
    'too-many-locals',
    'use-dict-literal',
]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
scripts_are_modules = true
warn_unused_configs = true
show_error_codes = true
allow_redefinition = true
plugins = ["pydantic.mypy"]

[tool.setuptools.package-data]
execflow = [
    "entities/*.json"
]

[project.optional-dependencies]
dev = [
    "pre-commit~=3.6",
    "pylint~=3.0",
    "pytest~=8.0",
    "pytest-cov~=4.1",
    "pgtest~=1.3",
]
