[metadata]
name = execflow
description = ExecFlow part of H2020-OpenModel
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/H2020-OpenModel/ExecFlow
author = Louis Ponet
keywords = openmodel

[options]
packages = find:
python_requires = >=3.8,<4
install_requires =
	aiida-core
	pydantic
	oteapi-core
	jsonschema
    pyyaml
    cachecontrol
setup_requires =
    reentry
	jsonref
include_package_data = True
reentry_register = true

[options.entry_points]
aiida.calculations =
    execflow.data.CUDS2DataNode = execflow.data.cuds:CUDS2DataNode
oteapi.function = 
	execflow.aiidacuds/cuds2datanode = execflow.data.cuds:CUDS2DataNodeStrategy
	execflow.aiidacuds/datanode2cuds = execflow.data.cuds:DataNode2CUDSStrategy
aiida.workflows = 
	execflow.declarative = execflow.workflows.declarative_chain:DeclarativeChain

[flake8]
ignore = E203, E266, W503
max-line-length = 88
max-complexity = 18
s
